--- a/AndroidTrivia/app/build.gradle
+++ b/AndroidTrivia/app/build.gradle
@@ -14,13 +14,11 @@
  * limitations under the License.
  */
 
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+}
 
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-kapt'
-
-apply plugin: 'androidx.navigation.safeargs'
 
 android {
     compileSdkVersion 32
